# Numerical-Recipes

./: .gitignore  CMakeLists.txt  README.md
include/NumericalRecipes/: base.hpp  math.hpp  types.hpp
include/NumericalRecipes/fft/: convolution.hpp
include/NumericalRecipes/io/: csv.hpp
include/NumericalRecipes/linear_algebra/: gauss_jordan.h  gauss_jordan.hpp  lu_decomposition.hpp  singular_valued_decomposition.hpp  tri_diagonal.hpp
include/NumericalRecipes/math/: gamma_beta_binomial_coeff_functions.hpp  incomplete_gamma_error_function.hpp
include/NumericalRecipes/plot/: psplot.hpp
include/NumericalRecipes/statistics/: savgol.hpp  savgol_coefficients.hpp
python/: savgol.py  test_on_data.py
python/savgol/: SavgolFilter.cp37-win_amd64.ilk  SavgolFilter.cp37-win_amd64.pyd  SavgolFilter.exp  SavgolFilter.lib  __init__.py
resources/: BinancBTC_4hr.csv  candle_line_plot.ps
source/: SavgolFilter.cpp
tests/: base.cpp  linear_algebra.cpp  math.cpp  read_csv.cpp  statistics.cpp  types.cpp
